--- a/package.json
+++ b/package.json
@@ -5,19 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "dev-peer": "cross-env GENERATE_PEER_PORT='true' nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^29.3.1"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "hex-to-binary": "^1.0.1",
+    "node-redis": "^0.1.7",
     "nodemon": "^2.0.20",
-    "redis": "^4.5.1"
+    "pubnub": "^7.2.2",
+    "redis": "^3.0.0",
+    "request": "^2.88.2"
   }
 }
